--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -142,7 +142,7 @@ section.nl-section.nl-players.nl-create-team
 
                     div.tab-content
                         div.tab-pane.active(id="all" role="tabpanel")
-                            div.nl-mob-table
+                            div.nl-mob-table.mob-table-striped
                                 div.nl-title
                                     div.row
                                         div.col-6
