--- a/markup/_scss/sections/_about.scss
+++ b/markup/_scss/sections/_about.scss
@@ -1,5 +1,5 @@
 .nl-about-section{
-  background: url(../img/nl-players-bg.jpg) center center no-repeat fixed;
+  background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
   background-size: cover;
   color: #121a31;
   padding-bottom: 10rem;
