--- a/markup/_scss/sections/_contact.scss
+++ b/markup/_scss/sections/_contact.scss
@@ -1,5 +1,5 @@
 .contact-wrapper{
-  background: url(../img/nl-players-bg.jpg) center center no-repeat fixed;
+  background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
   background-size: cover;
   color: #121a31;
   padding-bottom: 10rem;
