--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -1,5 +1,5 @@
 .nl-my-teams{
-  background: url(../img/nl-players-bg.jpg) center center no-repeat fixed;
+  background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
   background-size: cover;
   color: #121a31;
   padding-bottom: calculateRem(50px);
