--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -66,6 +66,7 @@
 @import "sections/nl-contests";
 
 @import "sections/contact";
+@import "sections/edit_profile";
 
 @import "elements/nl-theme-selector";
 
