--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -67,6 +67,7 @@
 
 @import "sections/contact";
 @import "sections/edit_profile";
+@import "sections/faq";
 
 @import "elements/nl-theme-selector";
 
