my balances page

--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -68,6 +68,7 @@
 @import "sections/contact";
 @import "sections/edit_profile";
 @import "sections/faq";
+@import "sections/_my_balances.scss";
 
 @import "elements/nl-theme-selector";
 
