--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -11800,6 +11800,83 @@ p {
   .nl-faq h2 {
     margin-bottom: 1.5625rem; }
 
+.nl-my-balances {
+  background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
+  background-size: cover; }
+  .nl-my-balances .nl-my-balances-wrapper {
+    max-width: 62.4375rem;
+    margin: 0 auto; }
+  .nl-my-balances h2 {
+    font-weight: 500;
+    text-align: center;
+    font-size: 2.125rem;
+    color: #061540;
+    margin-top: 1.25rem;
+    margin-bottom: 1.0625rem; }
+  .nl-my-balances .quote-wrapper {
+    margin-bottom: 1.875rem;
+    border-radius: 10px;
+    padding: 1.25rem;
+    background-color: #142d57; }
+    .nl-my-balances .quote-wrapper p {
+      margin: 0;
+      font-size: 1.5rem;
+      color: #fff; }
+      .nl-my-balances .quote-wrapper p .value {
+        color: #ff9f2f;
+        margin-left: 0.9375rem; }
+
+.balance-table {
+  margin-bottom: 1.875rem;
+  overflow: hidden;
+  border-radius: 0.625rem; }
+  .balance-table th:not(:first-child), .balance-table td:not(:first-child) {
+    text-align: left; }
+  .balance-table thead th {
+    padding: 1.25rem 0;
+    background-color: #142d57;
+    color: #ff9f2f;
+    font-size: 1.25rem;
+    font-weight: 400; }
+    @media (max-width: 991px) {
+      .balance-table thead th {
+        font-size: 0.9375rem; } }
+  .balance-table tbody {
+    background-color: #061540;
+    color: #fff;
+    font-weight: 400;
+    font-size: 1.125rem; }
+    @media (max-width: 991px) {
+      .balance-table tbody {
+        font-size: 0.9375rem; } }
+    .balance-table tbody td {
+      padding: 1.875rem 0; }
+      .balance-table tbody td:first-child {
+        padding: 0 1.875rem; }
+    .balance-table tbody img {
+      width: 1.875rem;
+      height: 2.5625rem;
+      margin-right: 1.0625rem; }
+
+.nl-balances-btn-wrapper {
+  padding: 0 5.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
+  .nl-balances-btn-wrapper .dark {
+    border-color: #061540;
+    background-color: #061540; }
+  @media (max-width: 991px) {
+    .nl-balances-btn-wrapper {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+      .nl-balances-btn-wrapper button {
+        margin-bottom: 0.9375rem; } }
+
 .mCS-nl-theme.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
   background-color: #dfdfdf; }
 
