--- a/markup/_layouts/_content/_index/nl-section-learn.jade
+++ b/markup/_layouts/_content/_index/nl-section-learn.jade
@@ -7,9 +7,9 @@ section.nl-section.nl-learn
                     div.card
                         div.card-header(role="tab" id="headingOne")
                             h5.mb-0
-                                a(data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne")
+                                a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne")
                                     |why nlc2?
-                        div(id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne")
+                        div(id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne")
                             div.card-block
                                 p Using NLC2 instead of fiat currency allows the platform to navigate around restrictive sports betting laws in the United States and other countries around the world. This gives the platform a truly global reach that long-established competitors can only dream of.
                     div.card
