terms and conditions page

--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -68,7 +68,8 @@
 @import "sections/contact";
 @import "sections/edit_profile";
 @import "sections/faq";
-@import "sections/_my_balances.scss";
+@import "sections/_my_balances";
+@import "sections/_terms-conditions";
 
 @import "elements/nl-theme-selector";
 
