--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -11877,6 +11877,78 @@ p {
       .nl-balances-btn-wrapper button {
         margin-bottom: 0.9375rem; } }
 
+.terms-conditions-wrapper {
+  background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
+  background-size: cover;
+  color: #121a31;
+  padding-bottom: 10rem; }
+
+#termsConditionsSection {
+  position: relative; }
+  #termsConditionsSection .block-dialog {
+    min-height: 0; }
+  #termsConditionsSection .block-content {
+    border-radius: 0.5rem;
+    -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+    box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21); }
+  #termsConditionsSection .block-header {
+    border-top-right-radius: .3rem;
+    border-top-left-radius: .3rem;
+    background-color: #142d57;
+    color: #fff;
+    margin: 0 auto;
+    padding: 1.5625rem 0;
+    position: relative; }
+    #termsConditionsSection .block-header h2 {
+      margin: 0 auto;
+      font-size: 2.125rem;
+      text-align: center;
+      color: #fb8700; }
+    #termsConditionsSection .block-header .close {
+      background: url(../img/close_btn.png) no-repeat;
+      position: absolute;
+      top: 2.25rem;
+      right: 1.25rem;
+      height: 49px;
+      width: 49px;
+      opacity: 1;
+      outline: none; }
+      @media (max-width: 991px) {
+        #termsConditionsSection .block-header .close {
+          top: 0.625rem;
+          right: 0.625rem; } }
+  #termsConditionsSection .block-header, #termsConditionsSection .block-footer {
+    border: none; }
+  #termsConditionsSection .block-body, #termsConditionsSection .block-footer {
+    background-color: #061540; }
+  #termsConditionsSection .block-body {
+    height: 100%;
+    padding: 1.5625rem 0 0; }
+    @media (max-width: 991px) {
+      #termsConditionsSection .block-body {
+        padding: 4.5rem 1.25rem 0; } }
+    #termsConditionsSection .block-body p {
+      color: #fff;
+      font-size: 0.875rem;
+      line-height: 1.5rem;
+      padding: 0 20px; }
+    #termsConditionsSection .block-body h2 {
+      font-size: 1.25rem;
+      color: #ff9f2f;
+      padding: 0 20px; }
+
+@media (min-width: 576px) {
+  .block-dialog {
+    max-width: 73.25rem; } }
+
+.block-backdrop.show {
+  opacity: 0.8;
+  background-color: #fff; }
+
+@media (max-width: 991px) {
+  .nl-table-scroll2 {
+    max-height: inherit; } }
+
 .mCS-nl-theme.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
   background-color: #dfdfdf; }
 
