--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -48,62 +48,62 @@ section.nl-section.nl-my-teams
                                         tr
                                             td
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                                         tr
                                             td
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                                         tr
                                             td.indicated
                                                 span.played.indicator
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                                         tr
                                             td
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                                         tr
                                             td.indicated
                                                 span.playing.indicator
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                                         tr
                                             td.indicated
                                                 span.playing.indicator
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                                         tr
                                             td
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                                         tr
                                             td.indicated
                                                 span.not-playing.indicator
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                                         tr
                                             td.indicated
                                                 span.playing.indicator
                                             td Player name
-                                            td D
+                                            td.pos D
                                             td 30
-                                            td.pos $0
+                                            td $0
                     .row
                         .col-12
                             div.nl-team-card-footer
@@ -145,62 +145,62 @@ section.nl-section.nl-my-teams
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.played.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.not-playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                     .row
                         .col-12
                             div.nl-team-card-footer
@@ -241,62 +241,62 @@ section.nl-section.nl-my-teams
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.played.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.not-playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                     .row
                         .col-12
                             div.nl-team-card-footer
@@ -337,62 +337,62 @@ section.nl-section.nl-my-teams
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.played.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.not-playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
-                                        td D
+                                        td.pos D
                                         td 30
-                                        td.pos $0
+                                        td $0
                     .row
                         .col-12
                             div.nl-team-card-footer
