--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -28,6 +28,7 @@
     color: #fff;
     overflow: hidden;
     margin-bottom: 2.25rem;
+    font-weight: 300;
 
     ul{
       list-style-type: none;
@@ -119,7 +120,7 @@
 
   .nl-team-card-footer{
     width: 100%;
-    background-color: #121a31;
+    background-color: #1d2d4e;
     color: #fff;
     overflow: hidden;
     display: flex;
