--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -11001,6 +11001,36 @@ p {
   margin: 0 auto;
   padding: 0; }
 
+/* country-selector
+---------------------------------------- */
+.country-selector .nav-item:first-child {
+  margin-left: 0; }
+
+.country-selector__link {
+  position: relative;
+  display: inline-block;
+  margin-left: 1rem; }
+  .country-selector__link:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-box-shadow: 0 1px 12px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 1px 12px rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .country-selector__link:hover:after {
+    opacity: 1; }
+  .country-selector__link:active:after {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    -webkit-box-shadow: inset 0px 0px 0px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0px 0px 0px 2px rgba(0, 0, 0, 0.1); }
+
 .login-wrapper {
   background: url(../img/nl-slide-img.jpg) top center no-repeat;
   background-size: cover; }
