--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -4,110 +4,78 @@ section.nl-section.nl-players.nl-create-team
             div.col-md-12
                 h1 CREATE TEAM
         div.row
-            div.col-md-12.col-lg-7
-                div.nl-players-filter-title Filter by lEAgue:
+            div.col-md-12.col-lg-8
+                div.nl-players-filter-title Filter by league:
                 div.nl-players-filter
                     div.row.align-items-center
-                        div.col-md-12
-                            div.owl-carousel.pl-flag
-                                div
-                                    button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/USA.png" alt="USA")
-                                div
-                                    button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/Spain.png" alt="Spain")
-                                div
-                                    button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/Germany.png" alt="Germany")
-                                div
-                                    button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/France.png" alt="France")
-                        //div.col-md-7
-                        //    button.btn.btn-primary(type="clear") Reset Filter
-                div.nl-players-filter-title FILTER by team:
-                div.nl-players-filter-caruseul
-                    div.owl-carousel.pl-teams
                         div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
+                            ul.country-selector.nav.nav-tabs(role="tablist")
+                                li.nav-item
+                                    a.country-selector__link.active(data-toggle="tab" href="#usa" role="tab")
+                                        img.haat(src="assets/img/flag/USA.png" alt="USA")
+                                li.nav-item
+                                    a.country-selector__link(data-toggle="tab" href="#spain" role="tab")
+                                        img.haat(src="assets/img/flag/Spain.png" alt="Spain")
+                                li.nav-item
+                                    a.country-selector__link(data-toggle="tab" href="#germany" role="tab")
+                                        img.haat(src="assets/img/flag/Germany.png" alt="Germany")
+                                li.nav-item
+                                    a.country-selector__link(data-toggle="tab" href="#france" role="tab")
+                                        img.haat(src="assets/img/flag/France.png" alt="France")
 
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-
-
+                div.nl-players-filter-title Filter by team:
+                div.tab-content
+                    div.tab-pane.active.fade.show(id="usa" role="tabpanel")
+                        div.nl-players-filter-caruseul
+                            div.owl-carousel.pl-teams
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/MU.png" alt="MU")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FC.png" alt="FC")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCB.png" alt="FCB")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/MU.png" alt="MU")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCB.png" alt="FCB")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/MU.png" alt="MU")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FC.png" alt="FC")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCB.png" alt="FCB")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/MU.png" alt="MU")
+                    div.tab-pane.fade(id="spain" role="tabpanel")
+                        div.nl-players-filter-caruseul
+                           p teams spain
+                    div.tab-pane.fade(id="germany" role="tabpanel")
+                        div.nl-players-filter-caruseul
+                            p teams germany
+                    div.tab-pane.fade(id="france" role="tabpanel")
+                        div.nl-players-filter-caruseul
+                            p teams france
 
         div.row.nl-no-wrap
             div.col-md-12.col-lg-8.nl-team-m600
@@ -1104,3 +1072,4 @@ section.nl-section.nl-players.nl-create-team
                                             td $0
                                             td
                                                 button.btn.btn-primary.btn-sm.btn-warning cut
+
