--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -285,5 +285,43 @@
   padding: 0;
 }
 
+/* country-selector
+---------------------------------------- */
+.country-selector {
 
+  .nav-item {
+
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+
+  &__link {
+    position: relative;
+    display: inline-block;
+    margin-left: calculateRem(16px);
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      box-shadow: 0 1px 12px rgba(0,0,0,0.4);
+      opacity: 0;
+      transition: all 0.3s ease-in-out;
+    }
+
+    &:hover:after {
+      opacity: 1;
+    }
+
+    &:active:after {
+      transition: all 0.3s ease-in-out;
+      box-shadow: inset 0px 0px 0px 2px rgba(0,0,0,0.1);
+    }
+  }
+}
 
