Align carousel with table width

--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -77,7 +77,7 @@ section.nl-section.nl-players.nl-create-team
                         div.nl-players-filter-caruseul
                             p teams france
 
-        div.row.nl-no-wrap
+        div.row
             div.col-md-12.col-lg-8.nl-team-m600
                 div.nl-players-table.nl-create-team-table
                     div.nl-players-table-data-field
