Change the mixin value to medium-display
It seemed that the display word is a reserved word and wasnt working

--- a/markup/_scss/base/_mixins.scss
+++ b/markup/_scss/base/_mixins.scss
@@ -19,7 +19,7 @@
       @content;
     }
   }
-  @else if $media==display {
+  @else if $media==medium-display{
     @media only screen and (min-width: 1201px) and (max-width: 1366px) {
       @content;
     }
