--- a/markup/_scss/layouts/_header.scss
+++ b/markup/_scss/layouts/_header.scss
@@ -6,7 +6,7 @@
   min-height: calculateRem(120px);
   &--top {
     padding: calculateRem(35px) calculateRem(100px);
-    @include respond-to(display){
+    @include respond-to(medium-display){
       padding: calculateRem(35px) 0;
     }
     @include respond-to(wide-tablets){
@@ -89,7 +89,7 @@
       font-weight: 700;
       margin: 0;
       text-shadow: 1px 1px 2px black;
-      @include respond-to(display){
+      @include respond-to(medium-display){
         @include fontSize(72px);
         @include lineHeight(82px);
       }
