--- a/markup/_scss/sections/_nl-section.scss
+++ b/markup/_scss/sections/_nl-section.scss
@@ -1,7 +1,7 @@
 
 .nl-section {
   padding: calculateRem(80px) 6.25rem;
-  @include respond-to(display){
+  @include respond-to(medium-display){
     padding: calculateRem(80px) 0;
   }
   @include respond-to(wide-tablets){
