--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-players.nl-contests
-    div.container-fluid
+    div.container
         div.row.align-items-center
             div.col-12.col-sm-4.col-md-3.col-xl-2
                 h1 contests
