--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-players.nl-create-team
-    div.container-fluid
+    div.container
         div.row
             div.col-md-12
                 h1 CREATE TEAM
