--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-players
-    div.container-fluid
+    div.container
         div.row
             div.col-md-12
                 h1 PLAYERS
