--- a/markup/_scss/sections/_nl-players.scss
+++ b/markup/_scss/sections/_nl-players.scss
@@ -1,5 +1,5 @@
 .nl-players {
-  background: url(../img/nl-players-bg.jpg) center center no-repeat fixed;
+  background: url(../img/stadion_full.jpg) 0 0 no-repeat fixed;
   background-size: cover;
   color: #121a31;
   padding-bottom: calculateRem(160px);
